<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/university_name">
        <menu>
            <item
                android:id="@+id/nav_centre_description"
                android:title="@string/ucentre_description_name"
                android:checkableBehavior="single"/>
            <item
                android:id="@+id/nav_academic_calendar"
                android:title="@string/uacademic_calendar_name" />
            <item
                android:id="@+id/nav_services"
                android:title="@string/uservices_name" />
            <item
                android:id="@+id/nav_ucontact"
                android:title="@string/ucontact_name" />

        </menu>


    </item>

    <group android:title="@string/others_name"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_arriving_in_alba"
            android:title="@string/oarriving_in_alba_name" />
        <item
            android:id="@+id/nav_visa_requirements"
            android:title="@string/ovisa_requirements" />
        <item
            android:id="@+id/nav_useful_information"
            android:title="@string/ouseful_information_name" />
        <item
            android:id="@+id/nav_traveling"
            android:title="@string/otraveling_name" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about_name" />
    </group>

</menu>
