<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/university_name">
        <menu>
            <item
                android:id="@+id/nav_news"
                android:title="@string/unews_name" />
            <item android:title="@string/ucourse_catalog_name" />
            <item
                android:id="@+id/nav_grading_system"
                android:title="@string/ugrading_system_name" />
            <item android:title="@string/uacademic_calendar_name" />
            <item android:title="@string/udocuments_name" />
            <item
                android:id="@+id/nav_ucontact"
                android:title="@string/ucontact_name" />
        </menu>
    </item>

    <item android:title="@string/campus_name">
        <menu>
            <item
                android:id="@+id/nav_information"
                android:title="@string/cinformation_name" />
            <item android:title="@string/dregulations_name" />
            <item android:title="@string/dcontact_name" />
        </menu>
    </item>

    <item android:title="@string/others_name">
        <menu>
            <item
                android:id="@+id/nav_arriving_in_alba"
                android:title="@string/oarriving_in_alba_name" />
            <item
                android:id="@+id/nav_visa_requirements"
                android:title="@string/ovisa_requirements" />
            <item
                android:id="@+id/nav_health_care_insurance"
                android:title="@string/ohealth_and_insurance_name" />
            <item
                android:id="@+id/nav_traveling"
                android:title="@string/otraveling_name" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about_name" />
    </group>

</menu>
