<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/radio_group_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <RadioButton
                android:id="@+id/radio_button_country_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_1" />

            <RadioButton
                android:id="@+id/radio_button_country_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_2" />
            <RadioButton
                android:id="@+id/radio_button_country_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_3" />

            <RadioButton
                android:id="@+id/radio_button_country_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_4" />
            <RadioButton
                android:id="@+id/radio_button_country_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_5" />

            <RadioButton
                android:id="@+id/radio_button_country_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_6" />
            <RadioButton
                android:id="@+id/radio_button_country_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_7" />

            <RadioButton
                android:id="@+id/radio_button_country_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_8" />
            <RadioButton
                android:id="@+id/radio_button_country_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_9" />
            <RadioButton
                android:id="@+id/radio_button_country_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_10" />
            <RadioButton
                android:id="@+id/radio_button_country_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_0" />
        </RadioGroup>
    </ScrollView>

</LinearLayout>