<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.alexa.centreforinternationalrelationsuab.SplashScreen"
android:background="@drawable/gradient_splash">


    <TextView
        android:id="@+id/textViewCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewCRI"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="190dp"
        android:text="@string/centre_of_international_relations"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/darker_gray"
        android:textSize="16sp" />

<TextView
    android:id="@+id/textViewCRI"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="15dp"
    android:gravity="center_horizontal"
    android:text="@string/uab_copyright"
    android:textColor="@android:color/darker_gray"
    android:textSize="12sp" />

<ImageView
    android:id="@+id/imageView"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:layout_above="@+id/textViewCopyright"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="16dp"
    android:src="@drawable/logo"
    android:contentDescription="@string/uab_logo_white" />




</RelativeLayout>